# biquality-learn

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  tests-requirements.txt
.github/workflows/: main.yml  release.yml  snapshot.yml  test.yml
bqlearn/: baseline.py  bilevel.py  ea.py  irbl.py  irlnl.py  metrics.py  multiclass.py  plugin.py  sprl.py  tradaboost.py  unbiased.py  unhinged.py
bqlearn/corruptions/: _imbalance.py  _label_noise.py  _sampling_biais.py  noise_matrices.py
bqlearn/corruptions/tests/: test_imbalance.py  test_label_noise.py  test_sampling_biais.py
bqlearn/density_ratio/: __init__.py  _idr.py  _kdr.py  _kmm.py  _pdr.py
bqlearn/density_ratio/tests/: test_dr.py  test_idr.py  test_kdr.py  test_kmm.py
bqlearn/model_selection/: __init__.py  _cv.py
bqlearn/model_selection/tests/: test_cv.py
bqlearn/tests/: test_common.py  test_ea.py  test_metrics.py  test_plugin.py  test_symmetric.py
bqlearn/utils/: __init__.py  _categorical.py
docs/: conf.py  docs-requirements.txt  reference.rst
docs/_static/: custom.css
docs/_templates/: class.rst  function.rst  module.rst
docs/userguide/: corruptions.rst  index.rst  intro.rst  rnd.rst  tl.rst  transition.rst
examples/: plot_cross_validation.py  plot_dynamic_tradaboost.py  plot_ea_linear_model.py  plot_idr.py  plot_kda.py  plot_kdr.py  plot_metadata_routing.py  plot_reweighting_vs_noise_model.py  plot_symmetric_property.py  plot_synthetic_corruptions.py  plot_transition_matrix.py  plot_unbiased_xp.py
src/bqlearn/: __init__.py  baseline.py  ea.py  irbl.py  irlnl.py  iter.py  metrics.py  multiclass.py  plugin.py  tradaboost.py  unbiased.py  unhinged.py
src/bqlearn/corruptions/: __init__.py  _imbalance.py  _label_noise.py  _weak_labels.py
src/bqlearn/density_ratio/: _idr.py  _kdr.py  _pdr.py
src/bqlearn/model_selection/: __init__.py
src/bqlearn/utils/: _sparse.py  validation.py
tests/: test_categorical.py  test_common.py  test_cv.py  test_dr.py  test_idr.py  test_irlnl.py  test_iter.py  test_kdr.py  test_kmm.py  test_metrics.py  test_multiclass.py  test_plugin.py  test_tradaboost.py  test_unbiased.py
tests/corruptions/: test_imbalance.py  test_noise_matrices.py  test_sampling_biais.py  test_weak_labels.py
