[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "biquality-learn"
dynamic = ["version"]
description = 'biquality-learn is a library à la scikit-learn for Biquality Learning.'
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
keywords = []
authors = [
  { name = "Pierre Nodet", email = "pierre.nodet@orange.com" },
]
classifiers = []
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn<=1.5.0",
  "scs"
]

[project.urls]
Documentation = "https://biquality-learn.readthedocs.io/"
Issues = "https://github.com/biquality-learn/biquality-learn/issues"
Source = "https://github.com/biquality-learn/biquality-learn"

[tool.hatch.build.targets.wheel]
packages = ["bqlearn"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.hatch-test]
extra-dependencies = ["pandas"]

[tool.coverage.run]
omit = ["tests"]

[tool.ruff]
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
preview = true
select = ["A", "E", "F", "W", "I"]
