[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "biquality-learn"
dynamic = ["version"]
description = 'biquality-learn is a library à la scikit-learn for Biquality Learning.'
readme = "README.md"
requires-python = ">=3.9"
license = "BSD-3-Clause"
authors = [
  { name = "Pierre Nodet", email = "pierre.nodet@orange.com" },
]
classifiers = [
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn<=1.5.0",
  "scs"
]

[project.urls]
Documentation = "https://biquality-learn.readthedocs.io/"
Issues = "https://github.com/biquality-learn/biquality-learn/issues"
Source = "https://github.com/biquality-learn/biquality-learn"

[tool.hatch.build.targets.wheel]
packages = ["src/bqlearn"]

[tool.ruff.lint.isort]
known-first-party = ["bqlearn"]

[tool.hatch.version]
source = "vcs"

[dependency-groups]
dev=[
  "pandas", 
  "pytest", 
  "pytest-cov", 
  "pytest-xdist",
]

[tool.coverage.run]
omit = ["tests/*"]

[tool.ruff]
line-length = 88
exclude = ["docs"]

[tool.ruff.lint]
preview = true
select = ["A", "E", "F", "W", "I"]